--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,252 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/* Login Form Design */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.mini-btn {
+  background: none;
+  color: none;
+  outline: none;
+  border: none;
+  color: #434cc3;
+  font-size: 1rem;
+  font-weight: 500;
+}
+.mini-btn:hover {
+  color: #021d69;
+}
+.my-btn-google {
   color: white;
+  background-color: #1c41a8 !important;
+  border-radius: 5px;
+  border: none;
+}
+.my-btn-facebook {
+  color: white;
+  background-color: #3a9981 !important;
+  border-radius: 5px;
+  border: none;
+}
+.icon {
+  font-size: 1.5rem;
+}
+.error {
+  color: rgb(255, 59, 59);
+  font-weight: light;
+}
+.success {
+  color: rgb(19, 116, 0);
+  font-weight: light;
 }
 
-.App-link {
-  color: #61dafb;
+.my-form .inp-style {
+  color: #0db0f0;
+  width: 100%;
+  display: block;
+  padding: 10px;
+  border-radius: 5px;
+  backdrop-filter: blur(15px);
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  margin: 10px 0;
+  outline: #fdf7f7;
+}
+.my-form .inp-style:focus {
+  border: rgb(240, 13, 13);
+  outline: rgb(240, 13, 13);
+}
+.my-form .inp-style::placeholder {
+  color: #0db0f0;
+}
+.my-btn-submit {
+  color: rgb(146, 43, 43);
+  background-color: #ac4e31 !important;
+  border-radius: 5px;
+  border: none;
+  border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.sidebar-text{
+    text-decoration: none;
+    color: white;
   }
-  to {
-    transform: rotate(360deg);
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+    perspective: 1500px;
+    background: #f4f7fc;
   }
-}
+  
+  #sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    /* background: #7386d5; */
+    background: #696563;
+    color: rgb(255, 255, 255);
+    transition: all 0.6s cubic-bezier(0.945, 0.02, 0.27, 0.665);
+    transform-origin: bottom left;
+  }
+  
+  #sidebar.active {
+    margin-left: -250px;
+    transform: rotateY(100deg);
+  }
+  
+  #sidebar .sidebar-header {
+    padding: 20px;
+    /* background: #6d7fcc; */
+    background: #696563;
+  
+  }
+  
+  #sidebar ul.components {
+    padding: 20px 0;
+    border-bottom: 1px solid #47748b;
+  }
+  
+  #sidebar ul p {
+    color: #fff;
+    padding: 10px;
+  }
+  
+  #sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+  }
+  #sidebar ul li a:hover {
+    color: #7386d5;
+    background: #fff;
+  }
+  
+  #sidebar ul li.active > a,
+  a[aria-expanded="true"] {
+    color: #fff;
+    background: #6d7fcc;
+  }
+  
+  a[data-toggle="collapse"] {
+    position: relative;
+  }
+  
+  .dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+  }
+  
+  ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: #6d7fcc;
+  }
+  
+  ul.CTAs {
+    padding: 20px;
+  }
+  
+  ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+  }
+  
+  a.download {
+    background: #fff;
+    color: #7386d5;
+  }
+  
+  a.article,
+  a.article:hover {
+    background: #6d7fcc !important;
+    color: #fff !important;
+  }
+  
+  /* ---------------------------------------------------
+      CONTENT STYLE
+  ----------------------------------------------------- */
+  #content {
+    width: 100%;
+    padding: 20px;
+    min-height: 100vh;
+    transition: all 0.3s;
+  }
+  
+  #sidebarCollapse {
+    width: 40px;
+    height: 40px;
+    background: #f5f5f5;
+    cursor: pointer;
+  }
+  
+  #sidebarCollapse span {
+    width: 80%;
+    height: 2px;
+    margin: 0 auto;
+    display: block;
+    background: #555;
+    transition: all 0.8s cubic-bezier(0.81, -0.33, 0.345, 1.375);
+    transition-delay: 0.2s;
+  }
+  
+  #sidebarCollapse span:first-of-type {
+    transform: rotate(45deg) translate(2px, 2px);
+  }
+  #sidebarCollapse span:nth-of-type(2) {
+    opacity: 0;
+  }
+  #sidebarCollapse span:last-of-type {
+    transform: rotate(-45deg) translate(1px, -1px);
+  }
+  
+  #sidebarCollapse.active span {
+    transform: none;
+    opacity: 1;
+    margin: 5px auto;
+  }
+  
+  /* ---------------------------------------------------
+      MEDIAQUERIES
+  ----------------------------------------------------- */
+
+  /* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
+@media (max-width: 768px) {
+    #sidebar {
+      margin-left: -250px;
+      transform: rotateY(90deg);
+    }
+    #sidebar.active {
+      margin-left: 0;
+      transform: none;
+    }
+    #sidebarCollapse span:first-of-type,
+    #sidebarCollapse span:nth-of-type(2),
+    #sidebarCollapse span:last-of-type {
+      transform: none;
+      opacity: 1;
+      margin: 5px auto;
+    }
+    #sidebarCollapse.active span {
+      margin: 0 auto;
+    }
+    #sidebarCollapse.active span:first-of-type {
+      transform: rotate(45deg) translate(2px, 2px);
+    }
+    #sidebarCollapse.active span:nth-of-type(2) {
+      opacity: 0;
+    }
+    #sidebarCollapse.active span:last-of-type {
+      transform: rotate(-45deg) translate(1px, -1px);
+    }
+  }
